Added missing natives for OpenGL and start resource loading

--- a/LDSnakeDesktop/build.gradle
+++ b/LDSnakeDesktop/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-windows"
     compile "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-macos"
     compile "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-linux"
+    compile "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-windows"
+    compile "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-macos"
+    compile "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-linux"
 
     compile 'com.goharsha:easyxml:0.1:@jar'
     compile 'com.goharsha:easyjson:0.3:@jar'
